# website

./: .gitignore  LICENSE  Makefile  amuletml-web.cabal  amuletml.cabal  default.nix  index.html  package-lock.json  package.json  site.hs  stack.yaml
assets/: main.js  main.scss
assets/css/: base.scss  code.scss  computer-modern.scss  main.scss  nav.scss
reference/: builtins.md  errors.md
syntax/: amcprove.xml  amulet.xml
templates/: content.html  default.html  example.html  tutorial.html
tutorials/: 00-installing.md  01-intro.md  02-data.ml  index.html
